@@ -14,4 +14,3 @@ vendor/
 junit/
 log/
 doc/
-.idea/
