@@ -18,11 +18,11 @@
     },
     {
       "name": "simp/iptables",
-      "version_requirement": ">= 6.0.0 < 7.0.0"
+      "version_requirement": ">= 6.4.0 < 7.0.0"
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.5.0 < 4.0.0"
+      "version_requirement": ">= 3.5.0 < 5.0.0"
     },
     {
       "name": "simp/logrotate",
@@ -41,15 +41,17 @@
     {
       "operatingsystem": "CentOS",
       "operatingsystemrelease": [
-        "6",
-        "7"
+        "8",
+        "7",
+        "6"
       ]
     },
     {
       "operatingsystem": "RedHat",
       "operatingsystemrelease": [
-        "6",
-        "7"
+        "8",
+        "7",
+        "6"
       ]
     },
     {
